included pct-change in df_5min.pkl

--- a/Preprocessing/process-poloniex-data.ipynb
+++ b/Preprocessing/process-poloniex-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,7 @@
     "df.time = pd.DatetimeIndex(df.time) \n",
     "df = df.set_index('time')\n",
     "df = df.sort_index()\n",
+    "df[currency+'_pctChange'] = df['weightedAverage'].pct_change().replace(np.nan, 0)\n",
     "df = df.rename(columns=\\\n",
     "        {'high':currency+'_high', 'low':currency+'_low', \\\n",
     "         'open':currency+'_open', 'close':currency+'_close', \\\n",
@@ -40,6 +41,7 @@
     "df.time = pd.DatetimeIndex(df.time) \n",
     "df = df.set_index('time')\n",
     "df = df.sort_index()\n",
+    "df[currency+'_pctChange'] = df['weightedAverage'].pct_change().replace(np.nan, 0)\n",
     "df = df.rename(columns=\\\n",
     "        {'high':currency+'_high', 'low':currency+'_low', \\\n",
     "         'open':currency+'_open', 'close':currency+'_close', \\\n",
@@ -55,6 +57,7 @@
     "df.time = pd.DatetimeIndex(df.time) \n",
     "df = df.set_index('time')\n",
     "df = df.sort_index()\n",
+    "df[currency+'_pctChange'] = df['weightedAverage'].pct_change().replace(np.nan, 0)\n",
     "df = df.rename(columns=\\\n",
     "        {'high':currency+'_high', 'low':currency+'_low', \\\n",
     "         'open':currency+'_open', 'close':currency+'_close', \\\n",
@@ -70,6 +73,7 @@
     "df.time = pd.DatetimeIndex(df.time) \n",
     "df = df.set_index('time')\n",
     "df = df.sort_index()\n",
+    "df[currency+'_pctChange'] = df['weightedAverage'].pct_change().replace(np.nan, 0)\n",
     "df = df.rename(columns=\\\n",
     "        {'high':currency+'_high', 'low':currency+'_low', \\\n",
     "         'open':currency+'_open', 'close':currency+'_close', \\\n",
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,13 +115,12 @@
        "      <th>USDT_BTC_quoteVolume</th>\n",
        "      <th>USDT_BTC_volume</th>\n",
        "      <th>USDT_BTC_weightedAverage</th>\n",
+       "      <th>USDT_BTC_pctChange</th>\n",
        "      <th>BTC_ETH_close</th>\n",
        "      <th>BTC_ETH_high</th>\n",
-       "      <th>BTC_ETH_low</th>\n",
        "      <th>...</th>\n",
-       "      <th>BTC_LTC_quoteVolume</th>\n",
-       "      <th>BTC_LTC_volume</th>\n",
        "      <th>BTC_LTC_weightedAverage</th>\n",
+       "      <th>BTC_LTC_pctChange</th>\n",
        "      <th>BTC_XRP_close</th>\n",
        "      <th>BTC_XRP_high</th>\n",
        "      <th>BTC_XRP_low</th>\n",
@@ -125,6 +128,7 @@
        "      <th>BTC_XRP_quoteVolume</th>\n",
        "      <th>BTC_XRP_volume</th>\n",
        "      <th>BTC_XRP_weightedAverage</th>\n",
+       "      <th>BTC_XRP_pctChange</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>time</th>\n",
@@ -161,13 +165,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>433.010137</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.002174</td>\n",
        "      <td>0.002177</td>\n",
-       "      <td>0.002174</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.011309</td>\n",
        "      <td>0.008078</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000014</td>\n",
        "      <td>0.000014</td>\n",
        "      <td>0.000014</td>\n",
@@ -175,6 +178,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000014</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-01-01 08:05:00</th>\n",
@@ -185,13 +189,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>433.010137</td>\n",
-       "      <td>0.002177</td>\n",
-       "      <td>0.002177</td>\n",
-       "      <td>0.002175</td>\n",
-       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.002177</td>\n",
+       "      <td>0.002177</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.008079</td>\n",
+       "      <td>0.000089</td>\n",
        "      <td>0.000014</td>\n",
        "      <td>0.000014</td>\n",
        "      <td>0.000014</td>\n",
@@ -199,6 +202,7 @@
        "      <td>980.096150</td>\n",
        "      <td>0.013429</td>\n",
        "      <td>0.000014</td>\n",
+       "      <td>0.005136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-01-01 08:10:00</th>\n",
@@ -209,13 +213,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>433.010137</td>\n",
-       "      <td>0.002175</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.002175</td>\n",
        "      <td>0.002175</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.008079</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000014</td>\n",
        "      <td>0.000014</td>\n",
        "      <td>0.000014</td>\n",
@@ -223,6 +226,7 @@
        "      <td>657.512017</td>\n",
        "      <td>0.009028</td>\n",
        "      <td>0.000014</td>\n",
+       "      <td>0.002190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-01-01 08:15:00</th>\n",
@@ -233,13 +237,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>433.010137</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.002174</td>\n",
        "      <td>0.002175</td>\n",
-       "      <td>0.002174</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.008079</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000014</td>\n",
        "      <td>0.000014</td>\n",
        "      <td>0.000014</td>\n",
@@ -247,6 +250,7 @@
        "      <td>862.028200</td>\n",
        "      <td>0.011801</td>\n",
        "      <td>0.000014</td>\n",
+       "      <td>-0.002913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-01-01 08:20:00</th>\n",
@@ -257,13 +261,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>433.010137</td>\n",
-       "      <td>0.002174</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.002174</td>\n",
        "      <td>0.002174</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.008079</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000014</td>\n",
        "      <td>0.000014</td>\n",
        "      <td>0.000014</td>\n",
@@ -271,10 +274,11 @@
        "      <td>5331.418950</td>\n",
        "      <td>0.072934</td>\n",
        "      <td>0.000014</td>\n",
+       "      <td>-0.000730</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
+       "<p>5 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -294,58 +298,58 @@
        "2016-01-01 08:15:00     433.010137                   0.0              0.0   \n",
        "2016-01-01 08:20:00     433.010137                   0.0              0.0   \n",
        "\n",
-       "                     USDT_BTC_weightedAverage  BTC_ETH_close  BTC_ETH_high  \\\n",
-       "time                                                                         \n",
-       "2016-01-01 08:00:00                433.010137       0.002174      0.002177   \n",
-       "2016-01-01 08:05:00                433.010137       0.002177      0.002177   \n",
-       "2016-01-01 08:10:00                433.010137       0.002175      0.002175   \n",
-       "2016-01-01 08:15:00                433.010137       0.002174      0.002175   \n",
-       "2016-01-01 08:20:00                433.010137       0.002174      0.002174   \n",
+       "                     USDT_BTC_weightedAverage  USDT_BTC_pctChange  \\\n",
+       "time                                                                \n",
+       "2016-01-01 08:00:00                433.010137                 0.0   \n",
+       "2016-01-01 08:05:00                433.010137                 0.0   \n",
+       "2016-01-01 08:10:00                433.010137                 0.0   \n",
+       "2016-01-01 08:15:00                433.010137                 0.0   \n",
+       "2016-01-01 08:20:00                433.010137                 0.0   \n",
        "\n",
-       "                     BTC_ETH_low           ...             \\\n",
-       "time                                       ...              \n",
-       "2016-01-01 08:00:00     0.002174           ...              \n",
-       "2016-01-01 08:05:00     0.002175           ...              \n",
-       "2016-01-01 08:10:00     0.002175           ...              \n",
-       "2016-01-01 08:15:00     0.002174           ...              \n",
-       "2016-01-01 08:20:00     0.002174           ...              \n",
+       "                     BTC_ETH_close  BTC_ETH_high        ...          \\\n",
+       "time                                                    ...           \n",
+       "2016-01-01 08:00:00       0.002174      0.002177        ...           \n",
+       "2016-01-01 08:05:00       0.002177      0.002177        ...           \n",
+       "2016-01-01 08:10:00       0.002175      0.002175        ...           \n",
+       "2016-01-01 08:15:00       0.002174      0.002175        ...           \n",
+       "2016-01-01 08:20:00       0.002174      0.002174        ...           \n",
        "\n",
-       "                     BTC_LTC_quoteVolume  BTC_LTC_volume  \\\n",
+       "                     BTC_LTC_weightedAverage  BTC_LTC_pctChange  \\\n",
+       "time                                                              \n",
+       "2016-01-01 08:00:00                 0.008078           0.000000   \n",
+       "2016-01-01 08:05:00                 0.008079           0.000089   \n",
+       "2016-01-01 08:10:00                 0.008079           0.000000   \n",
+       "2016-01-01 08:15:00                 0.008079           0.000000   \n",
+       "2016-01-01 08:20:00                 0.008079           0.000000   \n",
+       "\n",
+       "                     BTC_XRP_close  BTC_XRP_high  BTC_XRP_low  BTC_XRP_open  \\\n",
+       "time                                                                          \n",
+       "2016-01-01 08:00:00       0.000014      0.000014     0.000014      0.000014   \n",
+       "2016-01-01 08:05:00       0.000014      0.000014     0.000014      0.000014   \n",
+       "2016-01-01 08:10:00       0.000014      0.000014     0.000014      0.000014   \n",
+       "2016-01-01 08:15:00       0.000014      0.000014     0.000014      0.000014   \n",
+       "2016-01-01 08:20:00       0.000014      0.000014     0.000014      0.000014   \n",
+       "\n",
+       "                     BTC_XRP_quoteVolume  BTC_XRP_volume  \\\n",
        "time                                                       \n",
-       "2016-01-01 08:00:00                  1.4        0.011309   \n",
-       "2016-01-01 08:05:00                  0.0        0.000000   \n",
-       "2016-01-01 08:10:00                  0.0        0.000000   \n",
-       "2016-01-01 08:15:00                  0.0        0.000000   \n",
-       "2016-01-01 08:20:00                  0.0        0.000000   \n",
+       "2016-01-01 08:00:00             0.000000        0.000000   \n",
+       "2016-01-01 08:05:00           980.096150        0.013429   \n",
+       "2016-01-01 08:10:00           657.512017        0.009028   \n",
+       "2016-01-01 08:15:00           862.028200        0.011801   \n",
+       "2016-01-01 08:20:00          5331.418950        0.072934   \n",
        "\n",
-       "                     BTC_LTC_weightedAverage  BTC_XRP_close  BTC_XRP_high  \\\n",
-       "time                                                                        \n",
-       "2016-01-01 08:00:00                 0.008078       0.000014      0.000014   \n",
-       "2016-01-01 08:05:00                 0.008079       0.000014      0.000014   \n",
-       "2016-01-01 08:10:00                 0.008079       0.000014      0.000014   \n",
-       "2016-01-01 08:15:00                 0.008079       0.000014      0.000014   \n",
-       "2016-01-01 08:20:00                 0.008079       0.000014      0.000014   \n",
+       "                     BTC_XRP_weightedAverage  BTC_XRP_pctChange  \n",
+       "time                                                             \n",
+       "2016-01-01 08:00:00                 0.000014           0.000000  \n",
+       "2016-01-01 08:05:00                 0.000014           0.005136  \n",
+       "2016-01-01 08:10:00                 0.000014           0.002190  \n",
+       "2016-01-01 08:15:00                 0.000014          -0.002913  \n",
+       "2016-01-01 08:20:00                 0.000014          -0.000730  \n",
        "\n",
-       "                     BTC_XRP_low  BTC_XRP_open  BTC_XRP_quoteVolume  \\\n",
-       "time                                                                  \n",
-       "2016-01-01 08:00:00     0.000014      0.000014             0.000000   \n",
-       "2016-01-01 08:05:00     0.000014      0.000014           980.096150   \n",
-       "2016-01-01 08:10:00     0.000014      0.000014           657.512017   \n",
-       "2016-01-01 08:15:00     0.000014      0.000014           862.028200   \n",
-       "2016-01-01 08:20:00     0.000014      0.000014          5331.418950   \n",
-       "\n",
-       "                     BTC_XRP_volume  BTC_XRP_weightedAverage  \n",
-       "time                                                          \n",
-       "2016-01-01 08:00:00        0.000000                 0.000014  \n",
-       "2016-01-01 08:05:00        0.013429                 0.000014  \n",
-       "2016-01-01 08:10:00        0.009028                 0.000014  \n",
-       "2016-01-01 08:15:00        0.011801                 0.000014  \n",
-       "2016-01-01 08:20:00        0.072934                 0.000014  \n",
-       "\n",
-       "[5 rows x 28 columns]"
+       "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +380,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "USDT_BTC_close              0\n",
+       "USDT_BTC_high               0\n",
+       "USDT_BTC_low                0\n",
+       "USDT_BTC_open               0\n",
+       "USDT_BTC_quoteVolume        0\n",
+       "USDT_BTC_volume             0\n",
+       "USDT_BTC_weightedAverage    0\n",
+       "USDT_BTC_pctChange          0\n",
+       "BTC_ETH_close               0\n",
+       "BTC_ETH_high                0\n",
+       "BTC_ETH_low                 0\n",
+       "BTC_ETH_open                0\n",
+       "BTC_ETH_quoteVolume         0\n",
+       "BTC_ETH_volume              0\n",
+       "BTC_ETH_weightedAverage     0\n",
+       "BTC_ETH_pctChange           0\n",
+       "BTC_LTC_close               0\n",
+       "BTC_LTC_high                0\n",
+       "BTC_LTC_low                 0\n",
+       "BTC_LTC_open                0\n",
+       "BTC_LTC_quoteVolume         0\n",
+       "BTC_LTC_volume              0\n",
+       "BTC_LTC_weightedAverage     0\n",
+       "BTC_LTC_pctChange           0\n",
+       "BTC_XRP_close               0\n",
+       "BTC_XRP_high                0\n",
+       "BTC_XRP_low                 0\n",
+       "BTC_XRP_open                0\n",
+       "BTC_XRP_quoteVolume         0\n",
+       "BTC_XRP_volume              0\n",
+       "BTC_XRP_weightedAverage     0\n",
+       "BTC_XRP_pctChange           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DF.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,16 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa073500208>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f19e2020198>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -416,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
