fixed infinity in pct-change

--- a/Preprocessing/process-poloniex-data.ipynb
+++ b/Preprocessing/process-poloniex-data.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yicheng/.local/lib/python3.5/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
+     ]
+    }
+   ],
    "source": [
     "__author__ = 'Yicheng Li'\n",
     "\n",
@@ -25,6 +34,7 @@
     "df.time = pd.DatetimeIndex(df.time) \n",
     "df = df.set_index('time')\n",
     "df = df.sort_index()\n",
+    "df['weightedAverage']=df['weightedAverage'].replace(0,np.nan).fillna(method='ffill')\n",
     "df[currency+'_pctChange'] = df['weightedAverage'].pct_change().replace(np.nan, 0)\n",
     "df = df.rename(columns=\\\n",
     "        {'high':currency+'_high', 'low':currency+'_low', \\\n",
@@ -380,54 +390,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "USDT_BTC_close              0\n",
-       "USDT_BTC_high               0\n",
-       "USDT_BTC_low                0\n",
-       "USDT_BTC_open               0\n",
-       "USDT_BTC_quoteVolume        0\n",
-       "USDT_BTC_volume             0\n",
-       "USDT_BTC_weightedAverage    0\n",
-       "USDT_BTC_pctChange          0\n",
-       "BTC_ETH_close               0\n",
-       "BTC_ETH_high                0\n",
-       "BTC_ETH_low                 0\n",
-       "BTC_ETH_open                0\n",
-       "BTC_ETH_quoteVolume         0\n",
-       "BTC_ETH_volume              0\n",
-       "BTC_ETH_weightedAverage     0\n",
-       "BTC_ETH_pctChange           0\n",
-       "BTC_LTC_close               0\n",
-       "BTC_LTC_high                0\n",
-       "BTC_LTC_low                 0\n",
-       "BTC_LTC_open                0\n",
-       "BTC_LTC_quoteVolume         0\n",
-       "BTC_LTC_volume              0\n",
-       "BTC_LTC_weightedAverage     0\n",
-       "BTC_LTC_pctChange           0\n",
-       "BTC_XRP_close               0\n",
-       "BTC_XRP_high                0\n",
-       "BTC_XRP_low                 0\n",
-       "BTC_XRP_open                0\n",
-       "BTC_XRP_quoteVolume         0\n",
-       "BTC_XRP_volume              0\n",
-       "BTC_XRP_weightedAverage     0\n",
-       "BTC_XRP_pctChange           0\n",
-       "dtype: int64"
+       "USDT_BTC_close               True\n",
+       "USDT_BTC_high                True\n",
+       "USDT_BTC_low                 True\n",
+       "USDT_BTC_open                True\n",
+       "USDT_BTC_quoteVolume         True\n",
+       "USDT_BTC_volume              True\n",
+       "USDT_BTC_weightedAverage     True\n",
+       "USDT_BTC_pctChange          False\n",
+       "BTC_ETH_close                True\n",
+       "BTC_ETH_high                 True\n",
+       "BTC_ETH_low                  True\n",
+       "BTC_ETH_open                 True\n",
+       "BTC_ETH_quoteVolume          True\n",
+       "BTC_ETH_volume               True\n",
+       "BTC_ETH_weightedAverage      True\n",
+       "BTC_ETH_pctChange            True\n",
+       "BTC_LTC_close                True\n",
+       "BTC_LTC_high                 True\n",
+       "BTC_LTC_low                  True\n",
+       "BTC_LTC_open                 True\n",
+       "BTC_LTC_quoteVolume          True\n",
+       "BTC_LTC_volume               True\n",
+       "BTC_LTC_weightedAverage      True\n",
+       "BTC_LTC_pctChange            True\n",
+       "BTC_XRP_close                True\n",
+       "BTC_XRP_high                 True\n",
+       "BTC_XRP_low                  True\n",
+       "BTC_XRP_open                 True\n",
+       "BTC_XRP_quoteVolume          True\n",
+       "BTC_XRP_volume               True\n",
+       "BTC_XRP_weightedAverage      True\n",
+       "BTC_XRP_pctChange            True\n",
+       "dtype: bool"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DF.isnull().sum()"
+    "np.isfinite(DF).all()"
    ]
   },
   {
