enable saving episode number (global step)

--- a/Trading/RL/RaspberryDQNAgent.ipynb
+++ b/Trading/RL/RaspberryDQNAgent.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/shared/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from importlib import reload\n",
     "import tensorflow as tf\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_name = 'Raspberry'"
+    "experiment_name = 'Raspberry_long_train'"
    ]
   },
   {
@@ -104,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -131,22 +122,58 @@
      "output_type": "stream",
      "text": [
       "Auto loading is on, looking for saved checkpoints...\n",
-      "INFO:tensorflow:Restoring parameters from Raspberry/model.ckpt\n",
+      "INFO:tensorflow:Restoring parameters from Raspberry_long_train/model.ckpt-19\n",
       "Start from saved checkpoint...\n",
+      "Start from iteration: 20\n",
       "Training, randomly selecting episodes from  2017-01-01 00:00:00  to 2018-01-01 00:00:00 :  ~ 365 days\n",
       "\n",
-      "regression loss:  4.379134\n",
-      "regression loss:  46.819103\n",
-      "episode: 1/1000000, returns: 1.6, epsilon: 0.0045\n",
-      "regression loss:  2.502962\n",
-      "regression loss:  45.56948\n",
-      "episode: 2/1000000, returns: 3.4, epsilon: 0.0041\n",
-      "regression loss:  6.4110174\n",
-      "regression loss:  431.82526\n",
-      "episode: 3/1000000, returns: -9.3, epsilon: 0.0036\n",
-      "regression loss:  3.1025317\n",
-      "regression loss:  24.36853\n",
-      "episode: 4/1000000, returns: -1.2, epsilon: 0.0033\n"
+      "regression loss:  362952.6\n",
+      "regression loss:  197613.08\n",
+      "episode: 21/1000000, returns: -0.19, epsilon: 0.9\n",
+      "regression loss:  422150.34\n",
+      "regression loss:  113778.98\n",
+      "episode: 22/1000000, returns: 0.018, epsilon: 0.81\n",
+      "regression loss:  341484.75\n",
+      "regression loss:  51618.34\n",
+      "episode: 23/1000000, returns: 1.4, epsilon: 0.73\n",
+      "regression loss:  78387.734\n",
+      "regression loss:  42813.105\n",
+      "episode: 24/1000000, returns: -1.6e+01, epsilon: 0.66\n",
+      "regression loss:  58658.664\n",
+      "regression loss:  35930.05\n",
+      "episode: 25/1000000, returns: 7.1, epsilon: 0.59\n",
+      "regression loss:  118007.8\n",
+      "regression loss:  49347.52\n",
+      "episode: 26/1000000, returns: -5.8, epsilon: 0.53\n",
+      "regression loss:  52195.06\n",
+      "regression loss:  61681.99\n",
+      "episode: 27/1000000, returns: 5.1, epsilon: 0.48\n",
+      "regression loss:  50454.492\n",
+      "regression loss:  83078.45\n",
+      "episode: 28/1000000, returns: -4.9, epsilon: 0.43\n",
+      "regression loss:  92152.83\n",
+      "regression loss:  51392.402\n",
+      "episode: 29/1000000, returns: 0.98, epsilon: 0.39\n",
+      "regression loss:  33094.824\n",
+      "regression loss:  46966.418\n",
+      "episode: 30/1000000, returns: -0.9, epsilon: 0.35\n",
+      "saved to ./Raspberry_long_train/model.ckpt-29\n",
+      "regression loss:  85447.86\n",
+      "regression loss:  59883.555\n",
+      "episode: 31/1000000, returns: 4.8, epsilon: 0.31\n",
+      "regression loss:  6711.9297\n",
+      "regression loss:  49622.297\n",
+      "episode: 32/1000000, returns: 4.7, epsilon: 0.28\n",
+      "regression loss:  81777.51\n",
+      "regression loss:  25315.47\n",
+      "episode: 33/1000000, returns: -3.2, epsilon: 0.25\n",
+      "regression loss:  49220.23\n",
+      "regression loss:  82862.73\n",
+      "episode: 34/1000000, returns: 0.064, epsilon: 0.23\n",
+      "regression loss:  12478.738\n",
+      "regression loss:  28183.648\n",
+      "episode: 35/1000000, returns: -6.5, epsilon: 0.21\n",
+      "regression loss:  61439.363\n"
      ]
     },
     {
@@ -156,9 +183,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-49-a211c242ff71>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexperiment_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexperiment_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_start\u001b[0m\u001b[0;34m,\u001b[0m             \u001b[0mend_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_episodes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mauto_save_and_load\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Trading/RL/RaspberryDQNAgent.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, experiment_name, session, start_time, end_time, episode_len, num_episodes, verbose, auto_save_and_load)\u001b[0m\n\u001b[1;32m    304\u001b[0m                 \u001b[0mvalue_before_action\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mportfolio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetCurrentValue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetCurrentPrice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    305\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 306\u001b[0;31m                 \u001b[0maction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__act\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    307\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    308\u001b[0m                 \u001b[0mv_t\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mportfolio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetCurrentValue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetCurrentPrice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# ptfl value before action AND env.step !!!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Trading/RL/RaspberryDQNAgent.py\u001b[0m in \u001b[0;36m__act\u001b[0;34m(self, session, state)\u001b[0m\n\u001b[1;32m    156\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mepsilon\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 158\u001b[0;31m         \u001b[0mact_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    159\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mAction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mact_values\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    160\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-28-a211c242ff71>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexperiment_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexperiment_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_start\u001b[0m\u001b[0;34m,\u001b[0m             \u001b[0mend_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_episodes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mauto_save_and_load\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Trading/RL/RaspberryDQNAgent.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, experiment_name, session, start_time, end_time, episode_len, num_episodes, verbose, auto_save_and_load)\u001b[0m\n\u001b[1;32m    336\u001b[0m \u001b[0;31m#             if len(self.memory) > self.batch_size:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    337\u001b[0m \u001b[0;31m#                 self.__replay(session, self.batch_size)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 338\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__replay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    339\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__update_target_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    340\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Trading/RL/RaspberryDQNAgent.py\u001b[0m in \u001b[0;36m__replay\u001b[0;34m(self, session)\u001b[0m\n\u001b[1;32m    198\u001b[0m \u001b[0;31m#             print('immediate reward', reward)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m             \u001b[0mqvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    201\u001b[0m \u001b[0;31m#             print('target predict before action:', target)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Trading/RL/RaspberryDQNAgent.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, session, state, keep_prob)\u001b[0m\n\u001b[1;32m     94\u001b[0m         return session.run(self.preds, feed_dict={self.X_external: external_states,\n\u001b[1;32m     95\u001b[0m                                                   \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX_internal\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0minternal_states\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 96\u001b[0;31m                                                   self.keep_prob: keep_prob})  \n\u001b[0m\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[0;31m# Agent Implementation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/home/shared/anaconda3/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    903\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    904\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 905\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    906\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    907\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/home/shared/anaconda3/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1138\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfeed_dict_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1139\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m-> 1140\u001b[0;31m                              feed_dict_tensor, options, run_metadata)\n\u001b[0m\u001b[1;32m   1141\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1142\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -176,7 +203,7 @@
     "\n",
     "sess = tf.Session()\n",
     "agent.train(experiment_name=experiment_name, session=sess, start_time = train_start, \\\n",
-    "            end_time = train_end, num_episodes=1000000, verbose=False, auto_save_and_load=True) "
+    "            end_time = train_end, num_episodes=1000000, verbose=False, auto_save_and_load=True, save_every=50) "
    ]
   },
   {
@@ -252,7 +279,7 @@
     }
    ],
    "source": [
-    "agent.saver.save(sess, \"./\"+experiment_name+\"/model.ckpt\")"
+    "path = self.saver.save(session, \"./\"+experiment_name+\"/model.ckpt\")"
    ]
   },
   {
